@@ -58,6 +58,7 @@ Bugs fixed
 - Bug 1205 - EDCA is incorrectly modelled as DCF
 - Bug 1571 - TCP zero-window and flow control window updates by the receiver
 - Bug 1761 - Rounding with olsr::EmfToSeconds
+- Bug 1783 - BytesInFlight value fixed
 - Bug 1954 - Serialized size of wifi-net-device differ for TX and RX trace
 - Bug 1999 - PointToPointRemoteChannel invokes PointToPointChannel constructor
 - Bug 2003 - Missing DSSS short PLCP preamble
